Fixed blurriness of newsletter section bg img
added an HQ background image and fixed css sizing

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -835,9 +835,9 @@ section.newsletter {
         display: flex;
         justify-content: center;
         align-items: center;
-        background-image: url(../img/newsletter-artwork.png);
+        background-image: url(../img/newsletter_bg_big.png);
         background-position: center center;
-        background-size: auto;
+        background-size: 1000px;
         background-repeat: no-repeat;
     }
 
